2009-11-29  higepon  <higepon@users.sourceforge.jp>

	* Not to use Scheduler::SwitchToNext on any where, use only reasonable place.

2009-11-21  higepon  <higepon@users.sourceforge.jp>

	* core/scheme/lib/conf.scm.in : Added execution of stdio test.

	* tool/qemu/check_tests.scm: Added convinient make check feature. It runs qemu as daemon with no vga. check_tests.scm checks a log and print the result.

2009-11-18  higepon  <higepon@users.sourceforge.jp>

	* copied fat_write to file_server, since it used to be linked via svn:external.

	* Added .gitignore.

	* Migrated subversion to git thanks to id:mjt.

2009-11-14  higepon  <higepon@users.sourceforge.jp>

	* test/monalibc/stdio/test.cpp : Modified to use MUnit.

	* include/monapi/Mutex.h (MonAPI): Added document for Mutex class.

	* test/monapi/mutex/mutex.cpp (testClassMutex): Added test of Mutex class.

	* include/monapi/MUnit.h: Added simple unit test.

	* include/sys/error.h : Added some document.

2009-11-12  higepon  <higepon@users.sourceforge.jp>

	* test/monapi/mutex/mutex.cpp : Fixing bug on syscall_mutex_lock_timeout.

2009-11-11  higepon  <higepon@users.sourceforge.jp>

	* include/sys/error.h (enum): Added M_OK.

2009-11-04  higepon  <higepon@users.sourceforge.jp>

	* doc/config/Languages.txt : Added document tool support.

2009-11-03  higepon  <higepon@users.sourceforge.jp>

	* core/kernel/Process.cpp (Thread::Thread): Refactoring.

	* Added --enable-auto-import flag.

	* core/kernel/Thread.h (class Thread): Fixed a bug of clearEventWaiting().

2009-10-31  higepon  <higepon@users.sourceforge.jp>

	* test/monapi/mutex/mutex.cpp : Added tests for Mutex::lock with timeout.

	* include/monapi/Mutex.h (MonAPI): Added lock with timeout.

2009-10-07  higepon  <higepon@users.sourceforge.jp>

	* RELNOTE: Added.

2009-09-15  higepon  <higepon@users.sourceforge.jp>

	* core/monapi/monapi_impl.cpp (enterGuard): Now malloc/free family become thread safe.
